2003-11-12  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b8

	* "Not valid yet" was appearing under photos for non-logged in users.

	* Upgrades from version 1.3.3 will now work!

2003-11-12  Chris Schwerdt  <muti@afterglo.ws> 1.4.2-cvs-b7

	* Added album summary to fetch-albums and fetch-albums-prune

	* Added resize_size to fetch-albums and fetch-albums-prune

2003-11-12  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b6

	* Fixed bug where you couldn't move your albums after you'd configured
	  them once. Thanks to Ozgreg.

	* Added code so inline_gallerythumb.frames on existing sites still
	  works.

2003-11-12  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.2-cvs-b5

	* Fixed Image::getTag() to properly set image dimensions to $size if
	  specified. Previously, the setting was being improperly ignored in
	  some cases.

	* Fixed Config. Wizard's check_jpegtran() which was failing in some
	  cases when it shouldn't have been. (Bug #818041)

	* Added warning notice to upgraders in Config. Wizard Step 3.	
	
2003-11-09 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b4

	* Moved gallery/setup/manifest.inc to gallery/manifest.inc as 
	  it's purpose is to test that all the files in subdirectories 
	  have been updated, and so we need to make sure it has been 
	  updated.

	* Fix to gettext (missing _() ) problem.

	* Add check_version.php to diagnostics.

	* Add new files to manifest.inc and build_manifest.php.

2003-11-09 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b3

	* Fixed shadow frames so they work in Firebird on mac.  Await to see 
	  if it works with other browsers.

2003-11-09 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b2

	* Added number of votes to sorting order of voting.  Critique sorts 
	  by the average votes, and this enables differentiation between 
	  one voter giving and image 10/10 while everyone else ignores it 
	  and 400 voter giving it 10/10.  It also means that in rank voting, 